--- a/src/stories/button.css
+++ b/src/stories/button.css
@@ -1,12 +1,14 @@
 .storybook-button {
-  border: 0;
-  border-radius: 0.25rem;
-  cursor: pointer;
   display: flex;
   align-items: center;
   justify-content: space-between;
+  border: 0;
+  padding: 0 24px;
+  height: 48px;
   width: 100%;
+  cursor: pointer;
   font-size: 1em;
   font-family: 'Geometria', sans-serif;
-  padding: 10px;
+  font-weight: bold;
+  min-width: 152px;
 }
