--- a/src/stories/card.css
+++ b/src/stories/card.css
@@ -1,20 +1,21 @@
 .card-container {
-    padding: 1.5rem;
     border-radius: 0.5rem;
-    border: 1px solid rgba(0, 0, 0, 0.012);
-    background-color: rgba(0, 0, 0, 0.05);
+    border: 1px solid hsla(0, 0%, 0%, 12%);
+    background-color: hsla(0, 0%, 0%, 5%);
+    padding-bottom: 0.5rem;
 }
 
 .card-text-container {
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
-    padding-bottom: 1.5rem
+    padding: 1.5rem 1.5rem 1.5rem;
 }
 
 .card-title {
     font-size: 1.5em;
-    font-weight: normal;
+    font-family: 'Geometria', sans-serif;
+    font-weight: bold;
     margin: 0;
 }
 
