--- a/src/stories/card.css
+++ b/src/stories/card.css
@@ -1,7 +1,15 @@
+.main-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 500px;
+    width: 500px;
+}
+
 .card-container {
     border-radius: 0.5rem;
     border: 1px solid hsla(0, 0%, 0%, 12%);
-    background-color: hsla(0, 0%, 0%, 5%);
     padding-bottom: 0.5rem;
 }
 
@@ -20,6 +28,14 @@
 }
 
 .card-text {
-    font-size: 1em;
     margin: 0;
+    font-size: 1em;
+}
+
+.white {
+    color: #fff;
+}
+
+.black {
+    color: #000;
 }
