--- a/src/stories/cardWithBtn.css
+++ b/src/stories/cardWithBtn.css
@@ -20,13 +20,13 @@
     color: #236999
 }
 
-.card-container-dark {
+.card-container-transparent-blue {
     background-color: hsla(0, 0%, 100%, 0.2);
     border: 0.063rem solid hsla(0, 0%, 100%, 0.5);
     color: #fff;
 }
 
-.card-container-dark-solid {
+.card-container-solid {
     background-color: #fff;
     color: #236999;
 }
@@ -50,11 +50,11 @@
     font-size: 1em;
 }
 
-.card-text-white {
+.card-text-light {
     color: #fff;
 }
 
-.card-text-black {
+.card-text-dark {
     color: #000;
 }
 
