--- a/src/stories/button.css
+++ b/src/stories/button.css
@@ -2,24 +2,38 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  font-size: 1.125em; /* 18px */
+  font-size: 1.125em;
   font-family: 'Geometria', sans-serif;
-  font-weight: 700;
-  border: 0;
-  padding: 0 1.5rem;
+  font-weight: bold;
   height: 48px;
-  width: 100%;
-  cursor: pointer;
+  width: 95%;
   min-width: 152px;
-  background-color: #ffffff00;
+  cursor: pointer;
+  border-radius: 4px;
+  border-width: 2px;
+  border-style: solid;
+  background-color: transparent;
 }
 
-.button-close{
+.button-ghost {
+  color: #236999;
+  border: none;
+}
+
+.button-bordered, .button-solid {
+  padding: 0 1rem;
+}
+
+.button-solid {
+  color: #fff;
+}
+
+.button-close {
   justify-content: left;
   gap: 1rem;
 }
 
-.button-separate{
+.button-separate {
   justify-content: space-between;
 }
 
