--- a/src/stories/cardWithBtn.css
+++ b/src/stories/cardWithBtn.css
@@ -1,9 +1,5 @@
 .main-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
     width: 100%;
-    max-width: 1200px;
     height: auto;
     padding: 1rem;
 }
@@ -12,6 +8,10 @@
     border-radius: 0.5rem;
     padding-bottom: 0.5rem;
     width: 100%;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    gap: 1rem;
 }
 
 .card-container-light {
@@ -31,18 +31,18 @@
     color: #236999;
 }
 
+.card-title {
+    font-size: 1.5em;
+    font-weight: bold;
+    margin: 0;
+}
+
 .card-text-container {
     display: flex;
     flex-direction: column;
     font-size: 1.125em;
     gap: 0.5rem;
     padding: 1.5rem;
-}
-
-.card-title {
-    font-size: 1.5em;
-    font-weight: bold;
-    margin: 0;
 }
 
 .card-text {
